--- a/public/index.html
+++ b/public/index.html
@@ -2,207 +2,131 @@
 <html lang="fr">
 <head>
   <meta charset="UTF-8">
-  <title>Gestion de véhicules avec images</title>
+  <title>Gestion de véhicules avec prix et date</title>
   <style>
     body {
-  font-family: 'Arial', sans-serif;
-  background-color: #f7f7f7;
-  margin: 0;
-  padding: 0;
-}
+      font-family: 'Arial', sans-serif;
+      background-color: #f7f7f7;
+      margin: 0;
+      padding: 0;
+    }
 
-h1, h2 {
-  color: #333;
-  text-align: center;
-}
+    h1, h2 {
+      color: #333;
+      text-align: center;
+    }
 
-/* Container principal */
-.container {
-  width: 80%;
-  margin: 0 auto;
-  padding: 30px;
-}
+    .container {
+      width: 80%;
+      margin: 0 auto;
+      padding: 30px;
+    }
 
-/* Style de la déconnexion */
-.logout {
-  float: right;
-  background-color: #e74c3c;
-  color: white;
-  border: none;
-  padding: 10px 20px;
-  font-size: 16px;
-  cursor: pointer;
-  border-radius: 5px;
-  margin-top: 10px;
-  transition: background-color 0.3s ease;
-}
+    .form-container {
+      background-color: white;
+      padding: 20px;
+      border-radius: 8px;
+      box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+      margin-bottom: 20px;
+      animation: fadeIn 1s ease-in-out;
+    }
 
-.logout:hover {
-  background-color: #c0392b;
-}
+    .form-container h2 {
+      margin-bottom: 20px;
+      font-size: 22px;
+      color: #2e86de;
+    }
 
-/* Animation de la transition du bouton de déconnexion */
-.logout:active {
-  transform: scale(0.95);
-}
+    input[type="text"], input[type="number"], button {
+      width: 100%;
+      padding: 10px;
+      margin-bottom: 15px;
+      box-sizing: border-box;
+      border: 1px solid #ccc;
+      border-radius: 5px;
+      transition: all 0.3s ease;
+    }
 
-/* Formulaire d'ajout de véhicule */
-.form-container {
-  background-color: white;
-  padding: 20px;
-  border-radius: 8px;
-  box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
-  margin-bottom: 20px;
-  animation: fadeIn 1s ease-in-out;
-}
+    button {
+      background-color: #2e86de;
+      color: white;
+      font-size: 16px;
+      cursor: pointer;
+      border: none;
+    }
 
-.form-container h2 {
-  margin-bottom: 20px;
-  font-size: 22px;
-  color: #2e86de;
-}
+    button:hover {
+      background-color: #1e6fc8;
+      transform: translateY(-2px);
+    }
 
-input[type="text"], input[type="file"], button {
-  width: 100%;
-  padding: 10px;
-  margin-bottom: 15px;
-  box-sizing: border-box;
-  border: 1px solid #ccc;
-  border-radius: 5px;
-  transition: all 0.3s ease;
-}
+    button:active {
+      transform: translateY(2px);
+    }
 
-button {
-  background-color: #2e86de;
-  color: white;
-  font-size: 16px;
-  cursor: pointer;
-  border: none;
-}
+    table {
+      width: 100%;
+      border-collapse: collapse;
+      margin-top: 20px;
+      background-color: white;
+      box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+      animation: fadeIn 1s ease-in-out;
+    }
 
-button:hover {
-  background-color: #1e6fc8;
-  transform: translateY(-2px);
-}
+    th, td {
+      border: 1px solid #ddd;
+      padding: 12px;
+      text-align: left;
+      vertical-align: middle;
+      transition: background-color 0.3s ease;
+    }
 
-button:active {
-  transform: translateY(2px);
-}
+    th {
+      background-color: #f4f4f4;
+      font-weight: bold;
+      color: #333;
+    }
 
-/* Table des véhicules */
-table {
-  width: 100%;
-  border-collapse: collapse;
-  margin-top: 20px;
-  background-color: white;
-  box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
-  animation: fadeIn 1s ease-in-out;
-}
+    td {
+      color: #555;
+    }
 
-th, td {
-  border: 1px solid #ddd;
-  padding: 12px;
-  text-align: left;
-  vertical-align: middle;
-  transition: background-color 0.3s ease;
-}
+    tr:hover {
+      background-color: #ecf0f1;
+    }
 
-th {
-  background-color: #f4f4f4;
-  font-weight: bold;
-  color: #333;
-}
+    input[type="text"]#searchBar {
+      width: 100%;
+      padding: 12px;
+      margin-bottom: 20px;
+      box-sizing: border-box;
+      border: 1px solid #ccc;
+      border-radius: 5px;
+      font-size: 16px;
+      background-color: #fff;
+      transition: border-color 0.3s ease;
+    }
 
-td {
-  color: #555;
-}
+    input[type="text"]#searchBar:focus {
+      border-color: #2e86de;
+      outline: none;
+    }
 
-td img.preview {
-  width: 50px;
-  height: auto;
-  border-radius: 5px;
-}
-
-/* Animation de la survol des cellules du tableau */
-tr:hover {
-  background-color: #ecf0f1;
-}
-
-/* Barre de recherche */
-input[type="text"]#searchBar {
-  width: 100%;
-  padding: 12px;
-  margin-bottom: 20px;
-  box-sizing: border-box;
-  border: 1px solid #ccc;
-  border-radius: 5px;
-  font-size: 16px;
-  background-color: #fff;
-  transition: border-color 0.3s ease;
-}
-
-input[type="text"]#searchBar:focus {
-  border-color: #2e86de;
-  outline: none;
-}
-
-input[type="text"]#searchBar:active {
-  border-color: #3498db;
-}
-
-/* Effet d'ombre et animation lors du focus sur les champs */
-input[type="text"]:focus, input[type="file"]:focus {
-  border-color: #3498db;
-  box-shadow: 0 0 8px rgba(52, 152, 219, 0.5);
-  outline: none;
-  transition: box-shadow 0.3s ease;
-}
-
-/* Animation des éléments qui apparaissent */
-@keyframes fadeIn {
-  from {
-    opacity: 0;
-    transform: translateY(10px);
-  }
-  to {
-    opacity: 1;
-    transform: translateY(0);
-  }
-}
-
-/* Messages d'erreur et succès */
-.error {
-  color: red;
-  font-size: 14px;
-  margin-top: 10px;
-  text-align: center;
-  animation: slideIn 0.5s ease-in-out;
-}
-
-.success {
-  color: green;
-  font-size: 14px;
-  margin-top: 10px;
-  text-align: center;
-  animation: slideIn 0.5s ease-in-out;
-}
-
-@keyframes slideIn {
-  from {
-    transform: translateX(-50%);
-    opacity: 0;
-  }
-  to {
-    transform: translateX(0);
-    opacity: 1;
-  }
-}
-
+    @keyframes fadeIn {
+      from {
+        opacity: 0;
+        transform: translateY(10px);
+      }
+      to {
+        opacity: 1;
+        transform: translateY(0);
+      }
+    }
   </style>
 </head>
 <body>
 
-  <h1>Gestion de véhicules avec documents</h1>
+  <h1>Gestion de véhicules avec prix et date</h1>
 
   <div class="form-container">
     <h2>Ajouter un véhicule</h2>
@@ -212,11 +136,10 @@ input[type="text"]:focus, input[type="file"]:focus {
       <input type="text" id="vendeurNom" placeholder="Nom du vendeur" required>
       <input type="text" id="vendeurPrenom" placeholder="Prénom du vendeur" required><br>
       <input type="text" id="acheteurNom" placeholder="Nom de l'acheteur" required>
-      <input type="number" id="prix" placeholder="Prix du véhicule" required><br>
-      <input type="date" id="dateAchat" required><br>
-      <input type="time" id="heureAchat" required><br>
+      <input type="text" id="acheteurPrenom" placeholder="Prénom de l'acheteur" required><br>
+      Prix du véhicule : <input type="number" id="prix" placeholder="Prix du véhicule" required><br>
       <button type="submit">Ajouter</button>
-    </form>
+    </form>    
   </div>
 
   <div>
@@ -229,8 +152,8 @@ input[type="text"]:focus, input[type="file"]:focus {
           <th>Plaque</th>
           <th>Vendeur</th>
           <th>Acheteur</th>
-          <th>Identité</th>
-          <th>Permis</th>
+          <th>Prix</th>
+          <th>Date et Heure d'achat</th>
         </tr>
       </thead>
       <tbody id="vehicleBody"></tbody>
@@ -263,50 +186,31 @@ input[type="text"]:focus, input[type="file"]:focus {
       });
     }
 
+    form.addEventListener('submit', function (e) {
+      e.preventDefault();
 
-    function getBase64(file) {
-      return new Promise((resolve, reject) => {
-        const reader = new FileReader();
-        reader.onload = () => resolve(reader.result);
-        reader.onerror = reject;
-        reader.readAsDataURL(file);
-      });
-    }
+      // Récupérer les nouvelles informations ajoutées
+      const prix = document.getElementById('prix').value;
+      const dateAchat = new Date().toISOString().split('T')[0]; // Date actuelle au format YYYY-MM-DD
+      const heureAchat = new Date().toTimeString().split(' ')[0]; // Heure actuelle au format HH:MM:SS
 
-    form.addEventListener('submit', async function (e) {
-    e.preventDefault();
+      const vehicle = {
+        nomVehicule: document.getElementById('nomVehicule').value,
+        plaque: document.getElementById('plaque').value,
+        vendeurNom: document.getElementById('vendeurNom').value,
+        vendeurPrenom: document.getElementById('vendeurPrenom').value,
+        acheteurNom: document.getElementById('acheteurNom').value,
+        acheteurPrenom: document.getElementById('acheteurPrenom').value,
+        prix: prix,                  // Ajouter le prix
+        dateAchat: dateAchat,        // Ajouter la date d'achat
+        heureAchat: heureAchat       // Ajouter l'heure d'achat
+      };
 
-    // Récupérer les nouvelles informations ajoutées
-    const prix = document.getElementById('prix').value;
-    const dateAchat = document.getElementById('dateAchat').value;
-    const heureAchat = document.getElementById('heureAchat').value;
-
-    const identiteFile = document.getElementById('carteIdentite').files[0];
-    const permisFile = document.getElementById('permis').files[0];
-
-    const identiteBase64 = identiteFile ? await getBase64(identiteFile) : "";
-    const permisBase64 = permisFile ? await getBase64(permisFile) : "";
-
-    const vehicle = {
-      nomVehicule: document.getElementById('nomVehicule').value,
-      plaque: document.getElementById('plaque').value,
-      vendeurNom: document.getElementById('vendeurNom').value,
-      vendeurPrenom: document.getElementById('vendeurPrenom').value,
-      acheteurNom: document.getElementById('acheteurNom').value,
-      acheteurPrenom: document.getElementById('acheteurPrenom').value,
-      identite: identiteBase64,
-      permis: permisBase64,
-      prix: prix,                  // Ajouter le prix
-      dateAchat: dateAchat,        // Ajouter la date d'achat
-      heureAchat: heureAchat       // Ajouter l'heure d'achat
-    };
-
-    storedVehicles.push(vehicle);
-    saveVehicles();
-    displayVehicles();
-    form.reset();
+      storedVehicles.push(vehicle);
+      saveVehicles();
+      displayVehicles();
+      form.reset();
     });
-
 
     function filterVehicles() {
       const searchValue = searchInput.value.toLowerCase();
