--- a/public/index.html
+++ b/public/index.html
@@ -137,7 +137,7 @@
       <input type="text" id="vendeurPrenom" placeholder="Prénom du vendeur" required><br>
       <input type="text" id="acheteurNom" placeholder="Nom de l'acheteur" required>
       <input type="text" id="acheteurPrenom" placeholder="Prénom de l'acheteur" required><br>
-      Prix du véhicule : <input type="number" id="prix" placeholder="Prix du véhicule" required><br>
+      <input type="number" id="prix" placeholder="Prix du véhicule" required><br>
       <button type="submit">Ajouter</button>
     </form>    
   </div>
