--- a/public/index.html
+++ b/public/index.html
@@ -139,6 +139,7 @@
       <input type="text" id="acheteurPrenom" placeholder="Prénom de l'acheteur" required><br>
       <input type="number" id="prix" placeholder="Prix du véhicule" required><br>
       <button type="submit">Ajouter</button>
+      <button id="clearButton" onclick="clearVehicles()">Effacer tout</button>
     </form>    
   </div>
 
