--- a/public/index.html
+++ b/public/index.html
@@ -139,10 +139,9 @@
       <input type="text" id="acheteurPrenom" placeholder="Prénom de l'acheteur" required><br>
       <input type="number" id="prix" placeholder="Prix du véhicule" required><br>
       <button type="submit">Ajouter</button>
-      
     </form>    
   </div>
-<button id="clearButton" onclick="clearVehicles()">Effacer tout</button>
+
   <div>
     <h2>Liste des véhicules</h2>
     <input type="text" id="searchBar" placeholder="Rechercher..." oninput="filterVehicles()">
@@ -223,7 +222,7 @@
       );
       displayVehicles(filtered);
     }
-
+    clearVehicles()
     // Affichage initial
     displayVehicles();
   </script>
