--- a/public/index.html
+++ b/public/index.html
@@ -169,7 +169,7 @@
     // Récupérer les véhicules depuis l'API backend
     async function fetchVehicles() {
       try {
-        const response = await fetch('http://localhost:3000/api/vehicles');
+        const response = await fetch('https://gta-concession.vercel.app/api/vehicles');
         const vehicles = await response.json();
         displayVehicles(vehicles);
       } catch (error) {
@@ -215,7 +215,7 @@
       };
   
       try {
-        const response = await fetch('http://localhost:3000/api/vehicles', {
+        const response = await fetch('https://gta-concession.vercel.app/api/vehicles', {
           method: 'POST',
           headers: { 'Content-Type': 'application/json' },
           body: JSON.stringify(vehicle)
@@ -236,7 +236,7 @@
     clearButton.addEventListener('click', async function () {
       if (confirm("Êtes-vous sûr de vouloir effacer tous les véhicules ?")) {
         try {
-          const response = await fetch('http://localhost:3000/api/vehicles', {
+          const response = await fetch('https://gta-concession.vercel.app/api/vehicles', {
             method: 'DELETE'
           });
   
